@@ -1,7 +1,5 @@
 fc5952f14ae7838c3a4cedf5932ed61a  AmgX/AmgXWrapper_1a93865fe88.tar.gz
 d991279cc94080ada21d6ab9c978f2e7  AmgX/AmgX_47ae6962cd.tar.gz
-04e9abc45dc65473ef20e862ad3b95dd  AmgX/AmgX_ba9132119f.tar.gz
-2058066341e6381a8ab5f783ad738192  AmgX/AmgX_d0019e5.tar.gz
 e85017defd5a03ae82e634311db87bbf  Gmsh/fltk-1.3.5-source.tar.gz
 d45ed589f7aeb6898f9ef50f021857de  Gmsh/gmsh-4.4.1-source.tgz
 8fb659d9206dfd85fc1980f6db104087  MED/hdf5-1.10.3.tar.gz
@@ -109,20 +107,19 @@ b5e558f981326d9ca1bfdb841640721a  make-4.0.tar.gz
 0475638eb40a3920d0d3f14482c924a4  makedepend-1.0.5.tar.bz2
 015526f7328f746407f10a0a211f0c0a  nvc_get_devices.tgz
 9be6e048224797bf531f94b7a8aaa99d  osqp-0.6.0.tar.gz
-03865c8a7ad78a70ac2fe46918276124  petsc/MUMPS_5.2.0-p1.tar.gz
-b2e6f2373d480aa6f0ea5ca3d5d531c3  petsc/SuiteSparse-4.4.3.tar.gz
-488e231775fe827aea9d13e019b01ee1  petsc/ViennaCL-1.5.1.tar.gz
+6d5836e5894ff7bddfdcfeadb71e9ca1  petsc/MUMPS_5.2.1-p2.tar.gz
+0ddc62ed2636720be74be2e27e1fef6e  petsc/SuiteSparse-5.7.1.tar.gz
 c14af5cc0ee46e3f9e117d9dfb35b6af  petsc/cusplibrary-0.5.1.tar.gz
 5724bcffed4ebe39e9b55a9be80859ec  petsc/flex-2.6.0.tar.gz
-ecde5cc807ec45bfb647e9f28d2eaea1  petsc/hypre-2.14.0.tar.gz
-9365f01fdc31442283a69a78f9fa170b  petsc/metis-5.1.0-p5.tar.gz
-3ba025a94fa01594573ee0df4fca9bef  petsc/ml-e5040d11aa07.tar.gz
-e13c8514c2f97c8417d7cb61efc24ed4  petsc/parmetis-4.0.3-p4.tar.gz
-d41d8cd98f00b204e9800998ecf8427e  petsc/pastix_5.2.3.tar.bz2
-fe2f989d87d8e140045a0874b3c65c31  petsc/petsc-3.12.2.tar.gz
-53808e28b89e9ada15f6f150ca8ef53c  petsc/scalapack-2.0.2.tgz
-9e84d3abba150259743ff44f936af58b  petsc/scotch_6.0.6-p1.tar.gz
-767e221ba3752174b65d9257f9a97e06  petsc/superlu_dist-6.1.1.tar.gz
+f4aafff3efaf14a211bc8fd558044782  petsc/hypre-2.18.2.tar.gz
+af0d057274faf5b11966f02a5d62a4d7  petsc/metis-5.1.0-p8.tar.gz
+3ba025a94fa01594573ee0df4fca9bef  petsc/ml-6.2-p4.tar.gz
+4aefdc1b32412562260126698fcb8055  petsc/parmetis-4.0.3-p6.tar.gz
+5f8b02ff1034a8ff1f79c090d88a33dd  petsc/petsc-3.13.5.tar.gz
+42998e9de369916566e88a81eb243ca0  petsc/scalapack-2.1.0-p1.tgz
+2484682a84eddda48ddcbe725adea875  petsc/scotch-6.0.9.tar.gz
+b721c134f138620824347930f0333ceb  petsc/superlu-5.2.1.tar.gz
+cfa3a57cadd5b6df544bbb88942015b3  petsc/superlu_dist-6.3.0.tar.gz
 09b6819826850ed6aa5a561b31a63b0a  petsc/viennacl-b09c65a.tar.gz
 fa3a9bf9b2d6ed2431f1baa46f4058b8  tcl_tk/tcl8.5.13-src.tar.gz
 1fc7dbb7495160756dbc805224afa360  tcl_tk/tk8.5.13-src.tar.gz
