@@ -1,6 +1,9 @@
 --------------------------------------------------------------------------------------------------
 Release notes version 1.8.3_beta : Enhancements, modifications and corrected bugs since version 1.8.2 :
 --------------------------------------------------------------------------------------------------
+XX/XX/20 (TRUST)  Support     : int64 is supported by MUMPS solvers (ToDo: check)
+XX/XX/20 (TRUST)  Support     : Add Cholesky (not LU) factorization on GPU with Cholmod: "petsc_gpu cholesky_cholmod { }"
+XX/XX/20 (TRUST)  Library     : Update PETSc to 3.13.5
 13/01/21 (TRUST)  Bug fixed   : Regression introduced into 1.8.2 fixed : reading distributed mesh (scatter) could hang on during parallel calculation
 13/01/21 (TRUST)  New keyword : MultipleFiles keyword to change the upper number of MPI ranks (default 5120) where single files for I/O is enabled by default
 13/01/21 (TRUST)  Bug fixed   : Possible hang during massive parallel calculation with multiple open of .stop and .progress files
